--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "strict": true,
     "sourceMap": true,
-    "target": "esnext",
+    "target": "es5",
     "module": "esnext",
     "lib": ["esnext", "dom"],
     "moduleResolution": "node",
