--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.2.0",
   "description": "A collection of helper functions to improve the typing of Sanity resources.",
   "license": "MIT",
+  "keywords": [
+    "sanity",
+    "typescript",
+    "library",
+    "groq"
+  ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
