--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
+    "groq": "^1.149.0",
     "jest": "^25.2.7",
     "lint-staged": "^10.1.1",
     "npm-run-all": "^4.1.5",
