--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "main": "lib/index.js",
   "module": "lib/index.es.js",
-  "browser": "lib/index.bundle.js",
+  "browser": "lib/index.umd.js",
   "types": "lib/index.d.ts",
   "files": [
     "lib/**/*",
