--- a/package.json
+++ b/package.json
@@ -2,34 +2,33 @@
   "name": "sanity-typed-queries",
   "version": "0.6.8",
   "description": "A collection of helper functions to improve the typing of Sanity resources.",
-  "license": "MIT",
-  "repository": "danielroe/sanity-typed-queries",
-  "contributors": [
-    {
-      "name": "Daniel Roe <daniel@roe.dev>",
-      "url": "https://github.com/danielroe"
-    }
-  ],
   "keywords": [
     "sanity",
     "typescript",
     "library",
     "groq"
   ],
+  "repository": "danielroe/sanity-typed-queries",
+  "license": "MIT",
+  "contributors": [
+    {
+      "name": "Daniel Roe <daniel@roe.dev>",
+      "url": "https://github.com/danielroe"
+    }
+  ],
+  "sideEffects": false,
   "main": "lib/index.js",
   "module": "lib/index.es.js",
-  "umd:main": "lib/index.umd.js",
   "types": "lib/index.d.ts",
   "files": [
     "lib/**/*",
     "lib/index.d.ts",
     "!**/*.map"
   ],
-  "sideEffects": false,
   "scripts": {
     "build": "yarn clean && yarn compile",
     "clean": "rm -rf lib/*",
-    "compile": "rollup -c",
+    "compile": "siroc build",
     "lint": "run-s lint:all:*",
     "lint:all:eslint": "yarn lint:eslint --ext .js,.ts .",
     "lint:all:prettier": "yarn lint:prettier \"**/*.{js,json,ts}\"",
@@ -42,40 +41,27 @@
     "test:types": "tsd",
     "test:unit": "jest"
   },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
+  "resolutions": {
+    "minimist": ">=1.2.5"
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/plugin-transform-runtime": "^7.10.3",
-    "@babel/preset-env": "^7.10.3",
-    "@babel/preset-typescript": "^7.10.1",
     "@release-it/conventional-changelog": "^1.1.4",
-    "@rollup/plugin-babel": "^5.0.4",
     "@types/jest": "^26.0.3",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
     "codecov": "^3.7.0",
-    "eslint": "^7.3.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jest": "^23.17.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
     "groq": "^1.149.16",
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
-    "prettier-eslint-cli": "^5.0.0",
     "release-it": "^13.6.3",
-    "rollup": "^2.18.1",
-    "rollup-plugin-typescript2": "^0.27.1",
+    "siroc": "^0.1.2",
     "tsd": "0.11.0",
+    "typescript": "^3.9.5",
     "yorkie": "^2.0.0"
   },
-  "resolutions": {
-    "minimist": ">=1.2.5"
+  "gitHooks": {
+    "pre-commit": "lint-staged"
   },
   "tsd": {
     "directory": "test/tsd",
