--- a/package.json
+++ b/package.json
@@ -47,17 +47,20 @@
   "dependencies": {},
   "devDependencies": {
     "@release-it/conventional-changelog": "^1.1.4",
-    "@types/jest": "^26.0.4",
-    "codecov": "^3.7.0",
+    "@siroc/eslint-config": "^0.2.0",
+    "@siroc/jest-preset": "^0.2.0",
+    "@types/jest": "^26.0.8",
+    "codecov": "^3.7.2",
+    "esbuild": "0.5.9",
     "groq": "^1.149.16",
-    "jest": "^26.1.0",
+    "jest": "^26.2.2",
     "lint-staged": "^10.2.11",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
-    "release-it": "^13.6.4",
-    "siroc": "^0.1.2",
+    "release-it": "^13.6.6",
+    "siroc": "^0.3.0",
     "tsd": "0.13.1",
-    "typescript": "^3.9.6",
+    "typescript": "^3.9.7",
     "yorkie": "^2.0.0"
   },
   "gitHooks": {
