--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@ lib/*
 !lib/.gitkeep
 node_modules
 coverage
+
+# https://yarnpkg.com/advanced/qa#which-files-should-be-gitignored
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
