--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "sideEffects": false,
   "main": "lib/index.js",
+  "module": "lib/index.es.js",
   "types": "lib/index.d.ts",
   "files": [
     "lib/**/*",
@@ -72,7 +73,7 @@
     "lint-staged": "^10.4.0",
     "prettier": "^2.1.2",
     "release-it": "^14.0.3",
-    "siroc": "^0.3.1",
+    "siroc": "^0.3.3",
     "typescript": "^4.0.3"
   }
 }
