--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: '14'
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
