--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "codecov": "^3.8.1",
+    "conventional-changelog-conventionalcommits": "^4.5.0",
     "esbuild": "0.8.43",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
@@ -74,6 +75,7 @@
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "release-it": "^14.3.0",
+    "semver": "^7.3.4",
     "siroc": "^0.6.3",
     "typescript": "^4.1.3"
   }
