--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
     "build": "yarn clean && yarn compile",
     "clean": "rm -rf lib/*",
     "compile": "siroc build",
-    "postinstall": "husky install",
     "lint": "yarn lint:all:eslint && yarn lint:all:prettier",
     "lint:all:eslint": "yarn lint:eslint --ext .js,.ts .",
     "lint:all:prettier": "yarn lint:prettier \"**/*.{js,json,ts}\"",
     "lint:eslint": "eslint --fix",
     "lint:prettier": "prettier --write --loglevel warn",
-    "prepare": "yarn build",
+    "prepare": "husky install && yarn build",
     "prepublishOnly": "yarn lint && yarn test",
     "release": "release-it",
     "test": "yarn test:unit",
