--- a/package.json
+++ b/package.json
@@ -35,21 +35,18 @@
     "lint:eslint": "eslint --fix",
     "lint:prettier": "prettier --write --loglevel warn",
     "prepare": "husky install && yarn build",
-    "prepublishOnly": "yarn lint && yarn test",
+    "prepublishOnly": "yarn lint && yarn test && pinst --disable",
     "release": "release-it",
     "test": "yarn test:unit",
-    "test:unit": "jest"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "test:unit": "jest",
+    "postinstall": "husky install",
+    "postpublish": "pinst --enable"
   },
   "resolutions": {
     "minimist": ">=1.2.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
+    "@babel/core": "^7.13.14",
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.13.0",
@@ -58,24 +55,25 @@
     "@siroc/eslint-config": "^0.2.0",
     "@siroc/jest-preset": "^0.2.0",
     "@types/jest": "^26.0.22",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "codecov": "^3.8.1",
     "conventional-changelog-conventionalcommits": "^4.5.0",
-    "esbuild": "0.10.1",
-    "eslint": "^7.22.0",
+    "esbuild": "0.11.0",
+    "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-prettier": "^3.3.1",
     "expect-type": "^0.11.0",
     "groq": "^2.2.6",
-    "husky": "^5.2.0",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "release-it": "^14.5.0",
     "semver": "^7.3.5",
     "siroc": "^0.8.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "pinst": "^2.0.0"
   }
 }
