--- a/package.json
+++ b/package.json
@@ -69,11 +69,11 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "pinst": "^2.1.6",
     "prettier": "^2.2.1",
     "release-it": "^14.5.0",
     "semver": "^7.3.5",
     "siroc": "^0.8.0",
-    "typescript": "^4.2.3",
-    "pinst": "^2.0.0"
+    "typescript": "^4.2.3"
   }
 }
