--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sanity-typed-queries",
-  "version": "0.7.5",
+  "name": "@liammartens/sanity-typed-queries",
+  "version": "0.8.0",
   "description": "A collection of helper functions to improve the typing of Sanity resources.",
   "keywords": [
     "sanity",
