--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 14.x
       - run: yarn install
-      - run: yarn build
+      - run: yarn compile
       - uses: actions/upload-artifact@v2
         with:
           name: lib
