--- a/package.json
+++ b/package.json
@@ -48,18 +48,18 @@
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/plugin-transform-runtime": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
+    "@babel/preset-env": "^7.14.4",
     "@babel/preset-typescript": "^7.13.0",
     "@babel/runtime": "^7.14.0",
+    "@jest/test-sequencer": "^27.0.2",
     "@release-it/conventional-changelog": "^2.0.1",
     "@siroc/eslint-config": "^0.2.0",
-    "@siroc/jest-preset": "^0.2.0",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "codecov": "^3.8.2",
     "conventional-changelog-conventionalcommits": "^4.6.0",
-    "esbuild": "0.12.1",
+    "esbuild": "0.12.5",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^24.3.6",
@@ -67,13 +67,14 @@
     "expect-type": "^0.11.0",
     "groq": "^2.2.6",
     "husky": "^6.0.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.2",
+    "jest-environment-node": "^27.0.2",
     "lint-staged": "^11.0.0",
     "pinst": "^2.1.6",
     "prettier": "^2.3.0",
     "release-it": "^14.7.0",
     "semver": "^7.3.5",
     "siroc": "^0.10.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.2"
   }
 }
