test: switch to vitest

--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "prepare": "husky install && yarn build",
     "prepublishOnly": "yarn lint && yarn test && pinst --disable",
     "release": "release-it",
-    "test": "yarn test:unit",
-    "test:unit": "jest",
+    "test": "yarn test:types && yarn test:unit",
+    "test:types": "yarn tsc --noEmit",
+    "test:unit": "vitest",
     "postinstall": "husky install",
     "postpublish": "pinst --enable"
   },
@@ -46,35 +47,27 @@
     "minimist": ">=1.2.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
-    "@babel/runtime": "^7.17.2",
-    "@jest/test-sequencer": "^27.5.1",
     "@release-it/conventional-changelog": "^4.1.0",
-    "@siroc/eslint-config": "^0.2.0",
-    "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "c8": "^7.11.0",
     "codecov": "^3.8.3",
     "conventional-changelog-conventionalcommits": "^4.6.3",
     "esbuild": "0.14.23",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-prettier": "^4.0.0",
     "expect-type": "^0.13.0",
     "groq": "^2.15.0",
     "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "jest-environment-node": "^27.5.1",
     "lint-staged": "^12.3.4",
     "pinst": "^3.0.0",
     "prettier": "^2.5.1",
     "release-it": "^14.12.4",
     "semver": "^7.3.5",
     "siroc": "^0.16.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "vite": "^2.8.4",
+    "vitest": "^0.5.0"
   }
 }
