--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
     "sourceMap": true,
     "target": "esnext",
     "module": "esnext",
+    "allowSyntheticDefaultImports": true,
     "lib": ["esnext", "dom"],
     "moduleResolution": "node",
-    "rootDir": "src",
+    "rootDir": ".",
     "outDir": "lib",
     "declaration": true,
     "skipLibCheck": true
   },
-  "exclude": ["node_modules", "lib", "test"]
+  "include": ["src", "test"]
 }
