--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,8 @@
     "module": "esnext",
     "lib": ["esnext", "dom"],
     "moduleResolution": "node",
-    "rootDir": "src",
-    "outDir": "lib",
     "declaration": true,
     "skipLibCheck": true
   },
-  "exclude": ["node_modules", "lib", "test"]
+  "exclude": ["node_modules", "lib"]
 }
