--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@freighter-studio/sanity-typed-queries",
-  "version": "0.8.3",
+  "name": "sanity-typed-queries",
+  "version": "0.7.5",
   "description": "A collection of helper functions to improve the typing of Sanity resources.",
   "keywords": [
     "sanity",
@@ -8,16 +8,12 @@
     "library",
     "groq"
   ],
-  "repository": "liammartens/sanity-typed-queries",
+  "repository": "danielroe/sanity-typed-queries",
   "license": "MIT",
   "contributors": [
     {
       "name": "Daniel Roe <daniel@roe.dev>",
       "url": "https://github.com/danielroe"
-    },
-    {
-      "name": "Liam Martens <hi@liammartens.com>",
-      "url": "https://github.com/liammartens"
     }
   ],
   "sideEffects": false,
@@ -38,6 +34,7 @@
     "lint:all:prettier": "yarn lint:prettier \"**/*.{js,json,ts}\"",
     "lint:eslint": "eslint --fix",
     "lint:prettier": "prettier --write --loglevel warn",
+    "prepare": "husky install && yarn build",
     "prepublishOnly": "yarn lint && yarn test",
     "release": "release-it",
     "test": "yarn test:unit",
