--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      
+
       - uses: actions/setup-node@v2-beta
         with:
-          node-version: '14'
+          node-version: "14"
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
@@ -33,7 +33,6 @@ jobs:
             ${{ runner.os }}-yarn
 
       - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
         run: yarn
 
       - name: Lint project
@@ -65,7 +64,6 @@ jobs:
             ${{ runner.os }}-yarn
 
       - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
         run: yarn
 
       - name: Build project
