chore: migrate to pnpm

--- a/package.json
+++ b/package.json
@@ -10,64 +10,61 @@
   ],
   "repository": "danielroe/sanity-typed-queries",
   "license": "MIT",
-  "contributors": [
-    {
-      "name": "Daniel Roe <daniel@roe.dev>",
-      "url": "https://github.com/danielroe"
-    }
-  ],
+  "author": {
+    "name": "Daniel Roe <daniel@roe.dev>",
+    "url": "https://github.com/danielroe"
+  },
   "sideEffects": false,
-  "main": "lib/index.js",
-  "module": "lib/index.es.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "files": [
-    "lib/**/*",
-    "lib/index.d.ts",
+    "dist/**/*",
+    "dist/index.d.ts",
     "!**/*.map"
   ],
   "scripts": {
-    "build": "yarn clean && yarn compile",
-    "clean": "rm -rf lib/*",
-    "compile": "siroc build",
+    "build": "unbuild",
     "postinstall": "husky install",
-    "lint": "yarn lint:all:eslint && yarn lint:all:prettier",
-    "lint:all:eslint": "yarn lint:eslint --ext .js,.ts .",
-    "lint:all:prettier": "yarn lint:prettier \"**/*.{js,json,ts}\"",
+    "lint": "npm run lint:all:eslint && npm run lint:all:prettier",
+    "lint:all:eslint": "npm run lint:eslint -- --ext .js,.ts .",
+    "lint:all:prettier": "npm run lint:prettier -- \"**/*.{js,json,ts}\"",
     "lint:eslint": "eslint --fix",
     "lint:prettier": "prettier --write --loglevel warn",
-    "prepare": "husky install && yarn build",
-    "prepublishOnly": "yarn lint && yarn test && pinst --disable",
+    "prepare": "husky install && npm run build",
+    "prepublishOnly": "npm run lint && npm run test && pinst --disable",
     "postpublish": "pinst --enable",
     "release": "release-it",
-    "test": "yarn test:types && yarn test:unit",
-    "test:types": "yarn tsc --noEmit",
+    "test": "npm run test:types && npm run test:unit",
+    "test:types": "tsc --noEmit",
     "test:unit": "vitest"
   },
   "resolutions": {
     "minimist": ">=1.2.5"
   },
   "devDependencies": {
-    "@release-it/conventional-changelog": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
-    "c8": "^7.11.0",
-    "codecov": "^3.8.3",
+    "@release-it/conventional-changelog": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "c8": "^7.11.2",
     "conventional-changelog-conventionalcommits": "^4.6.3",
-    "esbuild": "0.14.23",
-    "eslint": "^8.10.0",
-    "eslint-config-prettier": "^8.4.0",
+    "esbuild": "0.14.36",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "expect-type": "^0.13.0",
-    "groq": "^2.15.0",
+    "groq": "^2.29.3",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.4",
+    "lint-staged": "^12.4.0",
     "pinst": "^3.0.0",
-    "prettier": "^2.5.1",
-    "release-it": "^14.12.5",
-    "semver": "^7.3.5",
-    "siroc": "^0.16.0",
-    "typescript": "^4.5.5",
-    "vite": "^2.8.5",
-    "vitest": "^0.5.8"
-  }
+    "prettier": "^2.6.2",
+    "release-it": "^14.14.2",
+    "resolve": "^1.22.0",
+    "semver": "^7.3.7",
+    "typescript": "^4.6.3",
+    "unbuild": "^0.7.4",
+    "vite": "^2.9.5",
+    "vitest": "^0.9.3"
+  },
+  "packageManager": "pnpm@6.32.2"
 }
