--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,76 +9,28 @@ on:
       - main
 
 jobs:
-  lint:
+  ci:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
-
-      - uses: actions/setup-node@v2-beta
+      - run: corepack enable
+      - uses: actions/setup-node@v3
         with:
-          node-version: "14"
+          node-version: 16
+          cache: "pnpm"
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+      - name: Install dependencies 📦
+        run: pnpm install --frozen-lockfile
 
-      - uses: actions/cache@v3
-        id: cache
-        with:
-          path: |
-            ${{ steps.yarn-cache-dir-path.outputs.dir }}
-            .yarn/*
-            !.yarn/releases
-            !.yarn/plugins
-            !.yarn/sdks
-            !.yarn/versions
-            .pnp.js
-          key: yarn-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('.pnp.js') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn
-
-      - name: Install dependencies
-        run: yarn
-
-      - name: Lint project
-        run: yarn lint
-
-  test:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-
-      - uses: actions/cache@v3
-        id: cache
-        with:
-          path: |
-            ${{ steps.yarn-cache-dir-path.outputs.dir }}
-            .yarn/*
-            !.yarn/releases
-            !.yarn/plugins
-            !.yarn/sdks
-            !.yarn/versions
-            .pnp.js
-          key: yarn-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('.pnp.js') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn
-
-      - name: Install dependencies
-        run: yarn
+      - name: Lint project 👀
+        run: pnpm run lint
 
       - name: Build project
-        run: yarn compile
+        run: pnpm run build
 
-      - name: Test project
-        run: yarn test
+      - name: Run tests 🧪
+        run: pnpm run test -- --coverage
 
       - name: Coverage
-        run: yarn codecov
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        uses: codecov/codecov-action@v2
