test: use `sanity-typed-queries` to allow testing built and src

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
     "rootDir": ".",
     "outDir": "lib",
     "declaration": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {
+      "sanity-typed-queries": ["."]
+    }
   },
   "include": ["src", "test"]
 }
