--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint:all:prettier": "npm run lint:prettier -- \"**/*.{js,json,ts}\"",
     "lint:eslint": "eslint --fix",
     "lint:prettier": "prettier --write --loglevel warn",
-    "prepare": "husky install && npm run build",
+    "prepare": "husky install && npm run build -- --stub",
     "prepublishOnly": "npm run lint && npm run test && pinst --disable",
     "postpublish": "pinst --enable",
     "release": "release-it",
