--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "typescript": "^4.7.4",
     "unbuild": "^0.7.4",
     "vite": "^2.9.13",
-    "vitest": "^0.17.0"
+    "vitest": "~0.10.0"
   },
   "packageManager": "pnpm@7.5.0"
 }
