--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@release-it/conventional-changelog": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
+    "@vitest/coverage-c8": "^0.22.1",
     "c8": "^7.12.0",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "esbuild": "0.15.5",
