build: add build step to `prepublish` command

--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
   "scripts": {
     "build": "unbuild",
     "postinstall": "husky install",
-    "lint": "npm run lint:all:eslint && npm run lint:all:prettier",
-    "lint:all:eslint": "npm run lint:eslint -- --ext .js,.ts .",
-    "lint:all:prettier": "npm run lint:prettier -- \"**/*.{js,json,ts}\"",
+    "lint": "pnpm lint:all:eslint && pnpm lint:all:prettier",
+    "lint:all:eslint": "pnpm lint:eslint -- --ext .js,.ts .",
+    "lint:all:prettier": "pnpm lint:prettier -- \"**/*.{js,json,ts}\"",
     "lint:eslint": "eslint --fix",
     "lint:prettier": "prettier --write --loglevel warn",
-    "prepare": "husky install && npm run build -- --stub",
-    "prepublishOnly": "npm run lint && npm run test && pinst --disable",
+    "prepare": "husky install && pnpm build --stub",
+    "prepublishOnly": "pnpm lint && pnpm test && pnpm build && pinst --disable",
     "postpublish": "pinst --enable",
     "release": "release-it",
-    "test": "npm run test:types && npm run test:unit",
+    "test": "pnpm test:types && pnpm test:unit",
     "test:types": "tsc --noEmit",
     "test:unit": "vitest"
   },
