--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "build": "unbuild",
     "postinstall": "husky install",
     "lint": "pnpm lint:all:eslint && pnpm lint:all:prettier",
-    "lint:all:eslint": "pnpm lint:eslint -- --ext .js,.ts .",
-    "lint:all:prettier": "pnpm lint:prettier -- \"**/*.{js,json,ts}\"",
+    "lint:all:eslint": "pnpm lint:eslint --ext .js,.ts .",
+    "lint:all:prettier": "pnpm lint:prettier \"**/*.{js,json,ts}\"",
     "lint:eslint": "eslint --fix",
     "lint:prettier": "prettier --write --loglevel warn",
     "prepare": "husky install && pnpm build --stub",
