--- a/package.json
+++ b/package.json
@@ -41,16 +41,16 @@
     "prepare": "husky install && pnpm build",
     "prepublishOnly": "pnpm lint && pnpm test && pinst --disable",
     "postpublish": "pinst --enable",
-    "release": "release-it",
+    "release": "bumpp && npm publish",
     "test": "pnpm test:types && pnpm test:unit",
     "test:types": "tsc --noEmit",
     "test:unit": "vitest run"
   },
   "devDependencies": {
-    "@release-it/conventional-changelog": "5.1.1",
     "@typescript-eslint/eslint-plugin": "5.52.0",
     "@typescript-eslint/parser": "5.52.0",
     "@vitest/coverage-c8": "0.28.5",
+    "bumpp": "^8.2.1",
     "c8": "7.12.0",
     "conventional-changelog-conventionalcommits": "5.0.0",
     "esbuild": "0.17.8",
@@ -63,7 +63,6 @@
     "lint-staged": "13.1.2",
     "pinst": "3.0.0",
     "prettier": "2.8.4",
-    "release-it": "15.6.0",
     "resolve": "1.22.1",
     "semver": "7.3.8",
     "typescript": "4.9.5",
