--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "lint:prettier": "prettier --write --loglevel warn",
     "dev:prepare": "pnpm build --stub",
     "prepare": "husky install && pnpm build",
-    "prepublishOnly": "pnpm lint && pnpm test && pinst --disable",
-    "postpublish": "pinst --enable",
+    "prepublishOnly": "pnpm lint && pnpm test",
     "release": "bumpp && npm publish",
     "test": "pnpm test:types && pnpm test:unit",
     "test:types": "tsc --noEmit",
@@ -62,7 +61,6 @@
     "groq": "3.9.1",
     "husky": "8.0.3",
     "lint-staged": "13.2.2",
-    "pinst": "3.0.0",
     "prettier": "2.8.8",
     "resolve": "1.22.3",
     "semver": "7.5.0",
