--- a/package.json
+++ b/package.json
@@ -48,9 +48,8 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
-    "@vitest/coverage-c8": "0.33.0",
+    "@vitest/coverage-v8": "0.34.1",
     "bumpp": "9.1.1",
-    "c8": "7.14.0",
     "conventional-changelog-conventionalcommits": "6.1.0",
     "esbuild": "0.19.1",
     "eslint": "8.47.0",
