--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "lint:all:eslint": "pnpm lint:eslint --ext .js,.ts .",
     "lint:all:prettier": "pnpm lint:prettier \"{src,test,docs}/*.{js,json,ts}\"",
     "lint:eslint": "eslint --fix",
-    "lint:prettier": "prettier --write --loglevel warn",
+    "lint:prettier": "prettier --write --log-level warn",
     "dev:prepare": "pnpm build --stub",
     "prepare": "husky install && pnpm build",
     "prepublishOnly": "pnpm lint && pnpm test",
@@ -46,20 +46,20 @@
     "test:unit": "vitest run"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
+    "@typescript-eslint/eslint-plugin": "6.3.0",
+    "@typescript-eslint/parser": "6.3.0",
     "@vitest/coverage-v8": "0.34.1",
     "bumpp": "9.1.1",
     "conventional-changelog-conventionalcommits": "6.1.0",
-    "esbuild": "0.19.1",
+    "esbuild": "0.19.2",
     "eslint": "8.47.0",
-    "eslint-config-prettier": "8.10.0",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-prettier": "5.0.0",
     "expect-type": "0.15.0",
     "groq": "3.15.1",
     "husky": "8.0.3",
-    "lint-staged": "13.2.3",
-    "prettier": "2.8.8",
+    "lint-staged": "14.0.0",
+    "prettier": "3.0.1",
     "resolve": "1.22.4",
     "semver": "7.5.4",
     "typescript": "5.1.6",
